Ureadable table in about:performance fix #63

--- a/userContent-files/about_pages/performance.css
+++ b/userContent-files/about_pages/performance.css
@@ -2,21 +2,13 @@
 	
 	#subprocess-reports th {
 	   background-color: var(--primary-accent-color) !important;
-		color: white !important;
+	   color: white !important;
 	}
 	
 	#subprocess-reports td {
-	    background-color: var(--primary-light-color) !important;
+	    background-color: var(--dark-accent) !important;
+		  border-color: var(--grey-70) !important;
 	}
 	
-	table {
-    background-color: red !important;;
-    color: -moz-DialogText;
-    font: message-box;
-    text-align: start;
-    width: 100%;
-    border: 1px solid ThreeDShadow;
-    border-spacing: 0px;
-}
-		
+	
 }
